   resized in some situations.

 * Fix bitmap preview tool not following cursor correctly (#244).

 * Allow detaching tool panels to floating windows or docking them to any
   side of the main window (#229).

 * Reduce unnecessary padding in decimal offsets (#235).

 * Fix range selection input for checksum/histogram on macOS.

Version 0.62.1 (2024-07-24):

 * Fix crashes in x86 Windows build on older CPUs.

Version 0.62.0 (2024-07-20):

 * Add bit array data type (#167).

 * Allow selecting and setting comments/highlights/types on
   bit-sized/aligned quantities, not just byte-aligned (#155).

 * Allow defining arbitrary integer types, up to 64 bits wide (#215).

 * Allow colouring data by byte value (#223).

 * Allow changing/defining custom highlight colours and assigning
   labels to them (#227).

 * Use dimmer highlight colours for dark colour schemes (#227).

 * Save highlight colours/labels per-file (#60).

 * Allow changing keyboard shortcuts (#226).

 * Add Shift+Enter shortcut for "OK" in the comment dialog (#226).

 * Display offset in both decimal and hexadecimal in status bar (#228).

 * Fix handling of relative paths specified on the command line when
   opening in an existing instance (#237).

 * Allow navigating hex data by nibbles rather than bytes (#58).

Version 0.61.1 (2024-03-13):

 * Compare data from correct file offsets when "Collapse matches" option is
   enabled in compare window (#224).

Version 0.61.0 (2024-02-14)

 * Permit trailing commas in template enum definitions (#216).

 * Add overwrite/insert toggle to "Fill range" dialog (#213).

 * Add copy/export context menu commands to strings tool (#210).

 * Fix temporary hang in strings tool when processing large files (#217).

 * Fix settings not being saved during application exit.

 * Batch comments panel updates to improve responsiveness (#205).

 * Add search field to comments panel (#204).

 * Add bit editor tool.

 * Add checksum tool (#219).
